<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_description"
        android:scaleType="centerCrop"
        android:src="@drawable/lake" />

    <TextView
        android:id="@+id/wish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/background2"
        android:fontFamily="serif-monospace"
        android:padding="8dp"
        android:text="@string/wish"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wish"
        android:layout_centerHorizontal="true"
        android:background="@color/background2"
        android:fontFamily="serif-monospace"
        android:padding="8dp"
        android:text="@string/android"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/g"
                android:layout_width="wrap_content"
                android:layout_height="174dp"
                android:padding="4dp"
                android:text="@string/g"
                android:textColor="@color/choiceOne"
                android:textSize="150sp" />

            <TextView
                android:id="@+id/r"
                android:layout_width="wrap_content"
                android:layout_height="174dp"
                android:padding="4dp"
                android:text="@string/r"
                android:textColor="@color/choiceTwo"
                android:textSize="150sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/i"
                android:layout_width="wrap_content"
                android:layout_height="174dp"
                android:padding="4dp"
                android:text="@string/i"
                android:textColor="@color/choiceThree"
                android:textSize="150sp" />

            <TextView
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="174dp"
                android:padding="4dp"
                android:text="@string/t"
                android:textColor="@color/choiceFour"
                android:textSize="150sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_1"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/guts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:padding="4dp"
                android:text="@string/guts"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/choiceOne"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/respect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:padding="4dp"
                android:text="@string/respect"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/choiceTwo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/integrity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:padding="4dp"
                android:text="@string/integrity"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/choiceThree"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tenacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:padding="4dp"
                android:text="@string/tenacity"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/choiceFour"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/background"
        android:gravity="center"
        android:text="@string/quote_5560"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

</RelativeLayout>